Added topic sorting, with a default topic order of 0 The default allows one to leave most topics with no order and use negative/large-positive order numbers to set intro/closing topics. The dummy Overview and Keyboard-Shortcuts are example intro/closing topics.

--- a/Help/_config.yml
+++ b/Help/_config.yml
@@ -19,5 +19,6 @@ defaults:
       type: "help_topics"
     values:
       layout: "help"
+      order: 0
 
 exclude: ['Makefile', 'jekyll-server.command']
