--- a/Help/Makefile
+++ b/Help/Makefile
@@ -1,10 +1,7 @@
 
-HELP = $(TARGET_BUILD_DIR)/$(TARGET_NAME)/en.lproj
+HELP = $(TARGET_BUILD_DIR)/$(LOCALIZED_RESOURCES_FOLDER_PATH)
 
 $(HELP) : * **/*
 	mkdir -p "$(HELP)"
 	[[ -s "$(HOME)/.rvm/environments/default" ]] && source "$(HOME)/.rvm/environments/default" && jekyll build --destination "$(HELP)"
 	hiutil -1 -vvv --create --anchor --file "$(HELP)/$(PROJECT_NAME).helpindex" "$(HELP)" 2>&1 | awk "{ if (/error:/) {printf \"error: \" ; err = 1} ; print} END {exit err}"
-
-clean :
-	rm -rf "$(TARGET_BUILD_DIR)/$(TARGET_NAME)"
