Renaming to align help book with Jekyll-Apple-Help generic template. - Changed folder an target name to XynkHelp - Changed info-plist name to plain Info.plist - Added Jekyll exclude for Info.plist

--- a/XynkHelp/Info.plist
+++ b/XynkHelp/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PROJECT_NAME)</string>
+	<string>$(PROJECT_NAME)Help</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
