Switched Jekyll-Apple-Help setup to allow localization and Improved indexing - Each language is now its own Jekyll Collection (_English.lproj, _Japanese.lproj, etc) - Moved help topics collection to localize version (_English.lproj) - Adjusted makefile to index all languages Index Improvements to default layout - Added support for robots - Added tight-NAV tags around navigation text to de-index it

--- a/XynkHelp/Makefile
+++ b/XynkHelp/Makefile
@@ -1,7 +1,7 @@
 
-HELP = $(TARGET_BUILD_DIR)/$(LOCALIZED_RESOURCES_FOLDER_PATH)
+HELP = $(TARGET_BUILD_DIR)/$(UNLOCALIZED_RESOURCES_FOLDER_PATH)
 
 $(HELP) : * **/*
 	mkdir -p "$(HELP)"
 	[[ -s "$(HOME)/.rvm/environments/default" ]] && source "$(HOME)/.rvm/environments/default" && jekyll build --destination "$(HELP)"
-	hiutil -1 -vvv --create --anchor --file "$(HELP)/search.helpindex" "$(HELP)" 2>&1 | awk "{ if (/error:/) {printf \"error: \" ; err = 1} ; print} END {exit err}"
+	find "$(HELP)" -name '*.lproj' -exec hiutil -1 -vvvv --create --anchors -e index.html --locale=English --file "{}/search.helpindex" "{}" 2>&1 \; | awk "{ if (/error:/) {printf \"error: \" ; err = 1} ; print} END {exit err}"
