Adjusted Makefile to index all languages and report warnings - Makefile now loops over all lproj folders to generate localized indexes. - Added anchor to title page and mark for anchor-only indexing (an hiutil bug seems to prevent using noindex) - Added InfoPlist.strings for localizing help-book name

--- a/XynkHelp/Makefile
+++ b/XynkHelp/Makefile
@@ -1,7 +1,14 @@
+# For command-line debugging, use the Jekyll default destination
+TARGET_BUILD_DIR ?= _site
 
-HELP = $(TARGET_BUILD_DIR)/$(UNLOCALIZED_RESOURCES_FOLDER_PATH)
+HELP := $(TARGET_BUILD_DIR)/$(UNLOCALIZED_RESOURCES_FOLDER_PATH)
 
 $(HELP) : * **/*
 	mkdir -p "$(HELP)"
 	[[ -s "$(HOME)/.rvm/environments/default" ]] && source "$(HOME)/.rvm/environments/default" && jekyll build --destination "$(HELP)"
-	find "$(HELP)" -name '*.lproj' -exec hiutil -1 -vvvv --create --anchors -e index.html --locale=English --file "{}/search.helpindex" "{}" 2>&1 \; | awk "{ if (/error:/) {printf \"error: \" ; err = 1} ; print} END {exit err}"
+	for LPROJ in "$(HELP)"/*.lproj ; do \
+		LANG=$$(basename "$$LPROJ" .lproj) ; \
+		echo "Indexing: $$LPROJ" ; \
+		hiutil -1 -vv --create --anchors --locale=$$LANG --file "$$LPROJ/search.helpindex" "$$LPROJ" 2>&1 | \
+		awk "{ if (/error:/) {printf \"error: \" ; err = 1} else {printf \"warning: \"} ; print} END {exit err}" ; \
+	done
