--- a/XynkHelp/_config.yml
+++ b/XynkHelp/_config.yml
@@ -26,7 +26,7 @@ defaults:
     scope:
       path: ""
     values:
-      layout: "help"
+      layout: "help-page"
       order: 0
 
 exclude: ['Makefile', 'jekyll-server.command', 'Info.plist']
