add missing site.bookid variable
Hardcoding may not be the sexiest thing, but it's a start. Otherwise the anchor from "Overview" to the title page would have no second argument

--- a/JekyllHelp/_config.yml
+++ b/JekyllHelp/_config.yml
@@ -4,6 +4,8 @@ apple_help: true  # Flag for conditional markup, if needed.
 # Build settings
 markdown: kramdown
 
+bookid: com.example.myapp.help
+
 # Localization collections for Help topics. Add more languages as needed.
 collections:
   English.lproj:
